--- a/lab 1/style.css
+++ b/lab 1/style.css
@@ -33,7 +33,7 @@ body {
 
 .promo {
 	background-color: rgba(41, 50, 59, 0.93);
-	background: url("background.jpg") center bottom;
+	background: url("background.jpg") no-repeat center bottom;
 	background-size: cover;
 	min-height: 514px;
 }
@@ -129,4 +129,95 @@ body {
 	padding: 20px 0;
 	font-weight: 300;
 	margin: 0;
+}
+
+.footer {
+	background: url("background.jpg") no-repeat center bottom;
+	background-attachment: fixed;
+	z-index: 3;
+	position: relative;
+	color: #ffffff;
+}
+
+.footer:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(41, 50, 59, 0.93);
+    z-index: 1;
+}
+
+.footer__main {
+	max-width: 1100px;
+    padding: 0 15px;
+    margin: 0 auto;
+    width: 100%;
+    position: relative;
+    z-index: 2;
+}
+
+.footer__menu {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 20px 0 0;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 767px) {
+    .footer__menu {
+        display: none;
+   }
+}
+
+.footer_menu__item {
+    margin-right: 70px;
+    height: 30px;
+    line-height: 28px;
+    margin-bottom: 10px;
+}
+
+.footer_menu__item:last-child {
+    margin-right: 0;
+}
+
+.footer__logo {
+	display: none;
+	margin: 0 auto;
+}
+
+@media (max-width: 767px) {
+    .footer__logo {
+        display: block;
+    }
+}	
+
+.footer__copyringt {
+	font-size: 24px;
+	color: #B2C4CB;
+	text-align: center;
+}
+
+.footer__subfooter {
+	width: 100%;
+	position: relative;
+	z-index: 2;
+}
+
+.footer__subfooter__inner {
+    color: #fff;
+    border-top: 1px solid #B2C4CB;
+    width: 100%;
+    padding: 10px 0;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 767px) {
+    .footer__subfooter__inner {
+        padding: 10px 30px;
+    }
 }
