--- a/lab 1/style.css
+++ b/lab 1/style.css
@@ -1,4 +1,9 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
+	margin:0;
 	padding: 0;
 	background-color: #ffffff;
 	font-family: "ProximaNova", Arial, sans-serif;
@@ -12,18 +17,6 @@ body {
 	max-height: 50px;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-	.green-line {
-		padding: 0 20px;
-		}
-	}
-
-@media (max-width: 767px) {
-	.green-line {
-		padding: 0 20px;
-	}
-}
-
 .menu {
 	width: 100%;
 	background: #29323b;
@@ -32,7 +25,6 @@ body {
 }
 
 .promo {
-	background-color: rgba(41, 50, 59, 0.93);
 	background: url("background.jpg") no-repeat center bottom;
 	background-size: cover;
 	min-height: 514px;
@@ -59,41 +51,53 @@ body {
 }
 
 .about__inner {
-    max-width: 1100px;
-    padding: 0 15px;
-    margin: 0 auto;
-    width: 100%;
-    padding-top: 30px;
-    padding-bottom: 30px; 
-    background-color: #F7F7F7;
-    display: flex;
+	max-width: 1100px;
+	padding: 0 15px;
+	margin: 0 auto;
+	width: 100%;
+	padding-top: 50px;
+	padding-bottom: 50px;
+	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+	.about__inner {
+		padding: 50px 20px;
+	}
 }
 
 @media (max-width: 767px) {
 	.about__inner {
 		flex-direction: column;
-		padding-top: 30px;
-		padding-bottom: 10px;
+		padding: 30px 20px 10px;
 	}
 }
 
-
 .about__col {
 	width: 50%;
+}
+
+@media (max-width: 767px) {
+	.about__col {
+		width: 90%;
+		padding: 0 0 20px 0;
+	}
 }
 
 .about__col:first-child {
 	text-align: right;
 	padding-right: 30px;
 }
+
 @media (max-width: 767px) {
 	.about__col:first-child {
 		text-align: center;
 		padding: 0 0 20px 20px;
 	}
 }
+
 @media (min-width: 768px) and (max-width: 1024px) {
 	.about__col:first-child {
 		text-align: center;
@@ -103,8 +107,8 @@ body {
 .about__col:last-child {
 	border-left: #979594 1px solid;
 	padding-left: 30px;
-	position: relative;
 }
+
 @media (max-width: 767px) {
 	.about__col:last-child {
 		width: 100%;
@@ -121,7 +125,6 @@ body {
 	}
 }
 
-
 .news-title {
 	color: #00ca67;
 	font-size: 40px;
@@ -131,40 +134,80 @@ body {
 	margin: 0;
 }
 
+.news {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin-bottom: 50px;
+}
+
+.news-item {
+	width: 30%;
+}
+
+@media (max-width: 850px) {
+	.news-item {
+		margin: 0 auto;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+	.news-item {
+		width: unset;
+		margin: 0 auto;
+	}
+}
+
+@media (max-width: 767px) {
+	.news-item {
+		width: unset;
+    	margin: 0 auto;
+  }
+}
+
+.news-img {
+	width: 100%;
+}
+
+.news-item-title {
+	text-align: center;
+	padding: 20px 0;
+	font-weight: 300;
+	margin: 0;
+}
+
 .footer {
 	background: url("background.jpg") no-repeat center bottom;
 	background-attachment: fixed;
-	z-index: 3;
 	position: relative;
 	color: #ffffff;
 }
 
 .footer:after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(41, 50, 59, 0.93);
-    z-index: 1;
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(41, 50, 59, 0.93);
 }
 
 .footer__main {
 	max-width: 1100px;
-    padding: 0 15px;
-    margin: 0 auto;
-    width: 100%;
-    position: relative;
-    z-index: 2;
+	padding: 0 15px;
+	margin: 0 auto;
+	width: 100%;
+	position: relative;
+	z-index: 1;
 }
 
 .footer__menu {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    padding: 20px 0 0;
-    flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
+	list-style: none;
+	padding: 20px 0 0;
+	flex-wrap: wrap;
 }
 
 @media (max-width: 767px) {
@@ -174,14 +217,14 @@ body {
 }
 
 .footer_menu__item {
-    margin-right: 70px;
-    height: 30px;
-    line-height: 28px;
-    margin-bottom: 10px;
+	margin-right: 70px;
+	height: 30px;
+	line-height: 28px;
+	margin-bottom: 10px;
 }
 
 .footer_menu__item:last-child {
-    margin-right: 0;
+	margin-right: 0;
 }
 
 .footer__logo {
@@ -190,10 +233,10 @@ body {
 }
 
 @media (max-width: 767px) {
-    .footer__logo {
-        display: block;
-    }
-}	
+	.footer__logo {
+		display: block;
+	}
+}
 
 .footer__copyringt {
 	font-size: 24px;
@@ -204,20 +247,20 @@ body {
 .footer__subfooter {
 	width: 100%;
 	position: relative;
-	z-index: 2;
+	z-index: 1;
 }
 
 .footer__subfooter__inner {
-    color: #fff;
-    border-top: 1px solid #B2C4CB;
-    width: 100%;
-    padding: 10px 0;
-    display: flex;
-    justify-content: center;
+	color: #fff;
+	border-top: 1px solid #B2C4CB;
+	width: 100%;
+	padding: 10px 0;
+	display: flex;
+	justify-content: center;
 }
 
 @media (max-width: 767px) {
-    .footer__subfooter__inner {
-        padding: 10px 30px;
-    }
+	.footer__subfooter__inner {
+		padding: 10px 30px;
+	}
 }
